--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8" />
     <title>Aikido Journey</title>
     <base href="/" />
+    <meta name="description" content="The web to follow your progress" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#fffaf3" />
   </head>
   <body>
     <app-root></app-root>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
   </body>
 </html>
